# binary-search-tree

./: .gitignore  README.md  bst.c  configure.ac  rapport.tex
src/: Makefile.am  bst.c  main.c  node.c
tests/: Makefile.am  check_bst.c  check_node.c
